# txb

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: desktop-file-validate
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  lib.rs  main.rs  models.rs  parser.rs
src/components/: DocumentRenderer.tsx  FindBar.tsx  OutlinePanel.tsx
src/lib/: history.test.ts  history.ts  search.test.ts  search.ts  types.ts  url.test.ts  url.ts
