[package]
name = "txb"
version = "0.1.0"
description = "Desktop plain-text browser"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "txb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.12", default-features = false, features = ["brotli", "charset", "cookies", "deflate", "gzip", "http2", "json", "rustls-tls"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_urlencoded = "0.7.1"
tauri = { version = "2.2.5", features = [] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4", features = ["serde"] }
